--- a/structures/pom.xml
+++ b/structures/pom.xml
@@ -5,4 +5,12 @@
   <version>0.0.1</version>
   <name>StructuresToHandleData</name>
   <description>Set of data structures</description>
+  <dependencies>
+<dependency>
+	<groupId>junit</groupId>
+	<artifactId>junit</artifactId>
+	<version>4.11</version>
+</dependency>
+
+  </dependencies>
 </project>
